--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@
 										<p>Jimmy Buffett is great.</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="icon major style3 fa-youtube "
+										></span>
 										<h3>Blog post 2 will chill here</h3>
 										<p>Words on my girl.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
+										<span class="icon major style5 fa-heartbeat"></span>
 										<h3>Blog post 3 is here</h3>
 										<p>Chance the Rapper is breakup music.</p>
 									</li>
