--- a/index.html
+++ b/index.html
@@ -90,29 +90,13 @@
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon fa-code-fork"></span>
-										<strong>5,120</strong> Etiam
+								<ul class="features">
+									<li>
+										<span class="icon major style1 fa-code"></span>
+										<h3>"I'm Gonna Let You Finish But...":The Kanye and Taylor Effect</h3>
+										<p>A podcast discussing how music artists are taking helm of America's political voice and how we are enabling them to do so.</p>
 									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open-o"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-diamond"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">"I'm Gonna Let You Finish But":The Kanye & Taylor Effect Podcast.</p>
+
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
