--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="https://images.unsplash.com/photo-1537302425600-def1ba96e0b9?ixlib=rb-0.3.5&amp;s=2877f0f6d21592f3db74b733a0d0d068&amp;auto=format&amp;fit=crop&amp;w=2775&amp;q=80" alt="" class="progressiveMedia-image js-progressiveMedia-image" data-src="https://cdn-images-1.medium.com/max/1600/0*KE-6D59UQg8AdABX"></span>
 								</div>
 							</section>
 
