--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Welcome to my website</h1>
-						<p>I enjoy writing words</p>
+						<h1>Music Today</h1>
+						<p>A blog investigating the complex relationship between music artists and their audiences in today's music era.</p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#intro" class="active">Podcast</a></li>
+							<li><a href="#first">Blog Posts</a></li>
+							<li><a href="#second">Video</a></li>
+							<li><a href="#cta">More</a></li>
 						</ul>
 					</nav>
 
@@ -42,11 +42,11 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>My name is Jessica</h2>
+											<h2>Checkout my Podcast</h2>
 										</header>
-										<p>19 and tired</p>
+										<p>"Imma Let You Finish But": The Taylor and Kanye Effect</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+
 										</ul>
 									</div>
 									<span class="image"><img src="https://images.unsplash.com/photo-1537302425600-def1ba96e0b9?ixlib=rb-0.3.5&amp;s=2877f0f6d21592f3db74b733a0d0d068&amp;auto=format&amp;fit=crop&amp;w=2775&amp;q=80" alt="" class="progressiveMedia-image js-progressiveMedia-image" data-src="https://cdn-images-1.medium.com/max/1600/0*KE-6D59UQg8AdABX"></span>
@@ -61,24 +61,24 @@
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
-										<h3>Blog post 1 says hello</h3>
-										<p>Jimmy Buffett is great.</p>
+										<h3>The Intoxicating Release of Parrothead Culture</h3>
+										<p>The child of Parrothead's puts a magnifying glassto the culture of Buffet and searches for new recruits from Gen Z.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-youtube "
 										></span>
-										<h3>Blog post 2 will chill here</h3>
-										<p>Words on my girl.</p>
+										<h3>"LongLive" the Swifties</h3>
+										<p>Need to edit this blog.</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-heartbeat"></span>
-										<h3>Blog post 3 is here</h3>
-										<p>Chance the Rapper is breakup music.</p>
+										<h3>SoundClound Rappers are Assualting GenZ</h3>
+										<p>6ix9ine and XXXTentacion.</p>
 									</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+
 									</ul>
 								</footer>
 							</section>
@@ -86,20 +86,20 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
+									<h2>Video</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
-										<h3>"I'm Gonna Let You Finish But...":The Kanye and Taylor Effect</h3>
-										<p>A podcast discussing how music artists are taking helm of America's political voice and how we are enabling them to do so.</p>
+										<h3>Video title</h3>
+										<p>Interviews w students </p>
 									</li>
 
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+									
 									</ul>
 								</footer>
 							</section>
@@ -107,9 +107,9 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Check this Out</h2>
+									<p>A source I frequently visit is <a href="http://genius.com">Genius.</a> This site  has lyrics to almost every song you can think of, commentary from artists over the meaning behind a song, collaborative comments from fans on the meaning behind something, and artists interviews.
+							    </p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
