--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Checkout my Podcast</h2>
+											<h2>Podcast</h2>
 										</header>
-										<p>"Imma Let You Finish But": The Taylor and Kanye Effect</p>
+										<p><a href="https://soundcloud.com/alexys-rivers/imma-let-you-finish-but-the-taylor-kanye-effect">"Imma Let You Finish But": The Taylor and Kanye Effect.</a>
 										<ul class="actions">
 
 										</ul>
@@ -56,23 +56,22 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Blog posts chillin' here</h2>
+									<h2>Blog Posts</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-code"></span>
-										<h3>The Intoxicating Release of Parrothead Culture</h3>
+
+										<h2><a href="https://medium.com/@mjess21/the-intoxicating-release-of-buffett-18052e6091b5">The Intoxicating Release of Buffet</a></h2>
 										<p>The child of Parrothead's puts a magnifying glassto the culture of Buffet and searches for new recruits from Gen Z.</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-youtube "
-										></span>
-										<h3>"LongLive" the Swifties</h3>
+
+										<h2><a href="https://medium.com/@mjess21/long-live-the-swifties-ff445697ebb4">"Long Live" the Swifties</a></h2>
 										<p>Need to edit this blog.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-heartbeat"></span>
-										<h3>SoundClound Rappers are Assualting GenZ</h3>
+
+										<h2><a href="https://medium.com/@mjess21/soundcloud-rappers-are-assaulting-genz-26e06aace5ab">"SoundClound Rappers are Assualting GenZ</a></h2>
 										<p>6ix9ine and XXXTentacion.</p>
 									</li>
 								</ul>
@@ -87,13 +86,11 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Video</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-code"></span>
-										<h3>Video title</h3>
+										<span class="icon major style3 fa-youtube"></span>
+										<h3><a href="https://www.youtube.com/watch?v=Q-QwFlaALl4">Drawing the Line: Gen Y on Musical Artists vs Art</a></h3>
 										<p>Interviews w students </p>
 									</li>
 
@@ -112,7 +109,7 @@
 							    </p>
 								</header>
 								<footer class="major">
-								
+
 									</ul>
 								</footer>
 							</section>
