--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 										<header class="major">
 											<h2>Podcast</h2>
 										</header>
-										<p><a href="https://soundcloud.com/alexys-rivers/imma-let-you-finish-but-the-taylor-kanye-effect">"Imma Let You Finish But": The Taylor and Kanye Effect.</a>
+										<p><h2><a href="https://soundcloud.com/alexys-rivers/imma-let-you-finish-but-the-taylor-kanye-effect">"Imma Let You Finish But": The Taylor and Kanye Effect.</h2></a>
 										<ul class="actions">
 
 										</ul>
@@ -67,7 +67,7 @@
 									<li>
 
 										<h2><a href="https://medium.com/@mjess21/long-live-the-swifties-ff445697ebb4">"Long Live" the Swifties</a></h2>
-										<p>Need to edit this blog.</p>
+										<p>Need to edit this blog, description will change accordingly.</p>
 									</li>
 									<li>
 
@@ -90,8 +90,8 @@
 								<ul class="features">
 									<li>
 										<span class="icon major style3 fa-youtube"></span>
-										<h3><a href="https://www.youtube.com/watch?v=Q-QwFlaALl4">Drawing the Line: Gen Y on Musical Artists vs Art</a></h3>
-										<p>Interviews w students </p>
+										<h2><a href="https://www.youtube.com/watch?v=Q-QwFlaALl4">Drawing the Line: Gen Y on Musical Artists vs Art</a></h2>
+										<p>Do college students actually care about the beliefs and values of the person behind their favorite song or has Gen Y found a way to separate the art from the artist? We surveyed Virginia Tech students on their awareness and apathy towards the music artists they listen to.</p>
 									</li>
 
 								<footer class="major">
