--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<li>
 
 										<h2><a href="https://medium.com/@mjess21/soundcloud-rappers-are-assaulting-genz-26e06aace5ab">"SoundClound Rappers are Assualting GenZ</a></h2>
-										<p>6ix9ine and XXXTentacion.</p>
+										<p>Rappers XXXTentacion and 6ix9ine have shot into thde public sphere thanks to their popularity on the music service SoundCloud. With their fame has come a long string of problematic behavior that is being accepted by their audience, setting the standards of behavior for generations to come.</p>
 									</li>
 								</ul>
 								<footer class="major">
