--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<li>
 
 										<h2><a href="https://medium.com/@mjess21/long-live-the-swifties-ff445697ebb4">"Long Live" the Swifties</a></h2>
-										<p>Need to edit this blog, description will change accordingly.</p>
+										<p>Taylor Swift has kept a devout fan base through thick and thin. There is something special in her music and performances that every artist can learn from.</p>
 									</li>
 									<li>
 
